public/app.css
/* ... */
.mini-table .checkbox,
.mini-table label {
  margin: 0px;
}

.mini-table label {
  display: block;
  font-size: 11px;
  font-family: 'Open Sans', sans-serif;
  min-height: 0px;
  padding-top: 3px;
  padding-bottom: 3px;
}

.mini-table label:hover {
  background: #f5f5f5;
}

.mini-table .table>tbody>tr>td {
  padding : 0px;
  border-bottom: 1px solid #f5f5f5;
  border-top: none;
}

.mini-table .table>tbody>tr>td.see-more {
  padding: .5em 0;
}

.mini-table .table>tbody>tr>td {
  padding : 0px;
  border-bottom: 1px solid #f5f5f5;
  border-top: none;
}

.mini-table tr.closed {
  opacity: .3;
}

.mini-table .table>tbody>tr.closed>td {
  padding : 1px 0px;
}

.mini-table tr.closed td * {
  /*display: none;*/
}

/* Alert */

.alert {
  padding: 6px 12px;
  margin-bottom: 0px;
  border-radius: 2px;
}

/* Tooltip */

.tooltip {
  font-size: 11px;
  opacity: .97;
}

.tooltip-inner {
  padding: 8px 10px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

/* Popover */

.popover {
  font-family: 'Poly', serif;
  font-size: 14px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

.popover-inner {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

.checkbox, .radio {
  margin-top: 5px;
  margin-bottom: 5px;
}

.clear-input {
  position: relative;
}

.clear-input input {
  padding-right: 30px;
}

.clear-input-icon {
  position: absolute;
  right: 10px;
  top: 9px;
  opacity: .5;
  cursor: pointer;
}

.clear-input-icon:hover {
  opacity: .8;
}

.facet {
  border: 1px solid #eee;
  padding: 6px;
  border-radius: 2px;
}

hr {
  margin-top: 15px;
  margin-bottom: 15px;
}

.pill {
    display: inline-block;
    border-radius: 3px;
    margin-right: 5px;
    margin-bottom: 5px;
    border: 1px solid #ddd;
    font-size: 12px;
}

.pill-dimension {
    display: inline-block;
    padding: 7px 10px;
    background-color: #f5f5f5;
    border-radius: 2px;
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
}

.pill-value {
    display: inline-block;
    padding: 6px 10px;
}

.pill-negative {
  text-decoration: line-through;
}

.dropdown-menu {
  font-size: 13px;
  border-radius: 2px;
  max-height: 300px;
  overflow-y: scroll;
}

.dropdown-menu>.active>a, .dropdown-menu>.active>a:focus, .dropdown-menu>.active>a:hover {
  color: #222;
  text-decoration: none;
  background-color: #eee;
  outline: 0;
}

#mytooltip{border:1px solid #e0e0e0;padding:5px 4px;background-color:"#3d424f";color:#fff;position:absolute;font-family:"Arial";font-size:10px;max-width:175px}.elastic-list{margin-top:25px;padding:2px;background:#f0;font-family:"Arial";font-size:12px;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}.elastic-list-dimension-header{font-size:12px;font-weight:bold;float:left;border:1px solid #fff;color:#f0f0f0;background-color:#333;padding:4px 0 0 5px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.elastic-list-dimension{float:left;border:none;overflow-y:auto;overflow-x:hidden;color:#444}.elastic-list-dimension-item{position:relative;border:1px solid #fff;background-color:#a5a5a5;font-size:11px;font-family:"Arial"}.elastic-list-dimension-item p{margin:4px 0 0 5px;float:left;display:inline}.elastic-list-dimension-item p.key{width:70%}.elastic-list-dimension-item p.value{float:right;margin-right:22px}.elastic-list-dimension-item-hover{background-color:#d3d3d3}.elastic-list-dimension-item-hover p{font-weight:bold}#filtering{border-top:1px dotted #000;font-size:12px;font-weight:bold;margin-right:25px;height:50px}#filtering .elastic-list-filters{padding-top:5px;font-weight:bold;margin:0;height:25px;color:#222}#filtering .elastic-list-filters p{margin:0}#filtering .elastic-list-filters span{color:#0cf}.filter{background-color:#0cf}.filter-item{float:left}.results-title{font-family:"Arial";font-weight:bold;margin:0;font-size:12px}#results{font-family:"Arial";font-size:11px;height:200px;overflow-y:auto;border-top:1px solid #909090;background-color:#f0f0f0;padding:0 5px}#results p{border-bottom:1px solid #fff}.price-motivation{font-style:italic;color:#808080}.post-info-social ul{list-style:none;margin:0;padding:0}.post-info-social span.links{margin-right:30px}.post-info-social li{float:left;width:16px;height:36px;padding-left:3px}.post-info-social a{color:#000;text-decoration:none;outline-style:none;font-weight:bold}.post-info-social img{float:left;margin:10px 24px 20px 0}.github{margin-right:35px}

.date-query-type {
  font-weight: 400;
  text-decoration: underline;
  font-size: 12px;
  margin-left: 10px;
  color: gray;
  cursor: pointer;
}

.date-query-type.date-query-type-label {
  text-decoration: none;
  cursor: default;
}

.date-query-type.explore {
  font-size: 11px;
}

.date-query-type.selected {
  text-decoration: none;
  font-weight: 800;
  cursor: default;
}

.entry-travel:hover {
  background-color: #DEF;
}

.entry-list-heading {
  display: flex;
  justify-items: space-between;
  flex-wrap: wrap;
}
.entry-list-heading > div.btn-group {
  flex: 1;
  margin: 0px 2px;
  text-align: center;
}
.entry-list-heading > div.btn-group > .btn {
  float: none;
}

.add-to-list-btn .input-group {
  width: 225px;
  margin: 10px;
}

.add-to-list-label {
  float: right;
  position: relative;
  margin-right: 10px;
}

.btn-group .caret {
  margin-left: 5px;
}

.topfix:first-child .row {
  position: relative;
  top: -10px;
}

.entry-checkbox {
  vertical-align: middle !important;
  width: 50px;
}

.entry-checkbox input {
  position: relative;
  left: 17px;
}

.entry-list-item a {
  color: #333;
}

.entry-row :first-child .entry-checkbox, .entry-row :first-child .entry-list-item {
  border-color: #fff;
}

table.table {
  margin-bottom: 0px;
}

.page-controls {
  text-align: center;
}

.page-controls a {
  margin: 0 1em;
}

.page-controls a[disabled] {
  color: #888;
  cursor: default;
}
/* ... */

